@@ -1,3 +1,6 @@
+* Tue Apr 23 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 7.10.1-0
+- Updated .travis.yml, .gitlab-ci.yml, .ruby-version
+
 * Mon Mar 25 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 7.10.0-0
 - Standardized cron datatypes to use the Simplib::Cron::### types.  This
   allows more flexibility in cron scheduling.
